--- a/12-grid alignment and justification/start-code/styles.css
+++ b/12-grid alignment and justification/start-code/styles.css
@@ -4,4 +4,17 @@
 
 .container {
   display: grid;
+  grid-template-columns: repeat(4, 150px);
+  grid-template-rows: repeat(3, 150px);
+  height: 500px;
+  border: 10px solid black;
+  /* justify-items: center; */
+  /* align-items: center; */
+  justify-content: center;
+  /* align-content: space-evenly; */
+}
+
+.item-4 {
+  justify-self: center;
+  align-self: center;
 }
