--- a/14-Project(header)/start code/styles.css
+++ b/14-Project(header)/start code/styles.css
@@ -5,6 +5,13 @@
   padding: 16px;
 }
 
+.header-container {
+  display: grid;
+  grid-template-columns: 24px 1fr;
+  column-gap: 8px;
+  align-items: center;
+}
+
 .logo {
   display: block;
   width: 24px;
@@ -33,6 +40,9 @@
 
 .posts {
   margin-bottom: 80px;
+  display: grid;
+  gap: 12px;
+  grid-template-columns: 1fr;
 }
 
 .post > a {
